--- a/wedding/templates/home.html
+++ b/wedding/templates/home.html
@@ -97,24 +97,24 @@
                     <img src="{{ url_for('static',filename='images/slider/slide-1.jpg') }}" alt class="slider-bg">
                 </div>
             </div>
-            <div class="hero-circle wow zoomIn" data-wow-duration="0.8s">
+            <div class="hero-circle wow zoomIn" data-wow-duration="6.8s">
                 <div class="circle-inner">
                     <div class="text">
                         <h4>
-                            <span class="wow fadeInUp" data-wow-delay="1.05s">s</span>
-                            <span class="wow fadeInUp" data-wow-delay="1.15s">a</span>
-                            <span class="wow fadeInUp" data-wow-delay="1.25s">v</span>
-                            <span class="wow fadeInUp" data-wow-delay="1.35s">e &nbsp;</span>
-                            <span class="wow fadeInUp" data-wow-delay="1.45s">t</span>
-                            <span class="wow fadeInUp" data-wow-delay="1.55s">h</span>
-                            <span class="wow fadeInUp" data-wow-delay="1.65s">e &nbsp;</span>
-                            <span class="wow fadeInUp" data-wow-delay="1.75s">d</span>
-                            <span class="wow fadeInUp" data-wow-delay="1.85s">a</span>
-                            <span class="wow fadeInUp" data-wow-delay="1.95s">t</span>
-                            <span class="wow fadeInUp" data-wow-delay="2.05s">e</span>
+                            <span>s</span>
+                            <span>a</span>
+                            <span>v</span>
+                            <span>e &nbsp;</span>
+                            <span>t</span>
+                            <span>h</span>
+                            <span>e &nbsp;</span>
+                            <span>d</span>
+                            <span>a</span>
+                            <span>t</span>
+                            <span>e</span>
                         </h4>
-                        <h2 class="wow fadeInUp" data-wow-delay="2.5s">Shilpi & Chitiz</h2>
-                        <p class="wow fadeInUp" data-wow-delay="0.0s">28th & 29th Jan 2020</p>
+                        <h2>Shilpi & Chitiz</h2>
+                        <p>28th & 29th Jan 2020</p>
                     </div>
                 </div>
             </div>
@@ -308,15 +308,7 @@
         <!-- end site-footer -->
 
 
-        <!-- strat music-box -->
-        <div class="music-box">
-            <button class="music-box-toggle-btn">
-                <i class="ti-music-alt"></i>
-            </button>
-            <div class="music-holder">
-                <iframe src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/102137206&amp;auto_play=true&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
-            </div>
-        </div>
+
         <!-- end music box -->
 
     </div>
