--- a/wedding/templates/home.html
+++ b/wedding/templates/home.html
@@ -175,7 +175,7 @@
                             </div>
                             <div class="details">
                                 <p>We are inviting you to Join our big ceremony</p>
-                                <p>Gaurav Path, Vaishali Rd, Ajmer, Rajasthan</p>
+                                <p>Mansingh Palace, Gaurav Path, Vaishali Rd, Ajmer, Rajasthan</p>
                             </div>
                             <div class="bride">
                                 <div class="img-holder">
