--- a/wedding/templates/home.html
+++ b/wedding/templates/home.html
@@ -168,7 +168,7 @@
                         <div class="couple">
                             <div class="groom">
                                 <div class="img-holder">
-                                    <img src="{{ url_for('static',filename='images/groom.jpg') }}" alt>
+                                    <img src="{{ url_for('static',filename='images/groom2.jpg') }}" alt>
                                 </div>
                                 <h4>Mr. Chitiz</h4>
                                 <p>The Groom</p>
@@ -181,7 +181,7 @@
                                 <div class="img-holder">
                                     <img src="{{ url_for('static',filename='images/bride.jpg') }}" alt>
                                 </div>
-                                <h4>Mrs. Shilpi</h4>
+                                <h4>Ms. Shilpi</h4>
                                 <p>The bride</p>
                             </div>
                         </div>
