--- a/wedding/templates/home.html
+++ b/wedding/templates/home.html
@@ -168,10 +168,10 @@
                         <div class="couple">
                             <div class="groom">
                                 <div class="img-holder">
-                                    <img src="{{ url_for('static',filename='images/bride.jpg') }}" alt>
+                                    <img src="{{ url_for('static',filename='images/groom4.jpg') }}" alt>
                                 </div>
-                                <h4>Ms. Shilpi</h4>
-                                <p>The Bride</p>
+                                <h4>Mr. Chitiz</h4>
+                                <p>The Groom</p>
                             </div>
                             <div class="details">
                                 <p>We are inviting you to Join our big ceremony</p>
@@ -179,10 +179,10 @@
                             </div>
                             <div class="bride">
                                 <div class="img-holder">
-                                    <img src="{{ url_for('static',filename='images/groom3.jpg') }}" alt>
+                                    <img src="{{ url_for('static',filename='images/bride.jpg') }}" alt>
                                 </div>
-                                <h4>Mr. Chitiz</h4>
-                                <p>The Groom</p>
+                                <h4>Ms. Shilpi</h4>
+                                <p>The bride</p>
                             </div>
                         </div>
                     </div>
