--- a/wedding/templates/home.html
+++ b/wedding/templates/home.html
@@ -63,7 +63,7 @@
                             <span class="icon-bar"></span>
                         </button>
                         <h1 class="site-logo">
-                            <a class="navbar-brand" href="index.html"><i class="fi flaticon-favorite-heart-button"></i> Shilpi & Chitiz</a>
+                            <a class="navbar-brand" href="/"><i class="fi flaticon-favorite-heart-button"></i> Shilpi & Chitiz</a>
                         </h1>
                     </div>
                     <div id="navbar" class="navbar-collapse collapse navbar-right navigation-holder">
@@ -182,7 +182,7 @@
                                     <img src="{{ url_for('static',filename='images/bride.jpg') }}" alt>
                                 </div>
                                 <h4>Ms. Shilpi</h4>
-                                <p>The bride</p>
+                                <p>The Bride</p>
                             </div>
                         </div>
                     </div>
@@ -246,7 +246,7 @@
                                         <li><i class="ti-alarm-clock"></i> Jan 28, 2020</li>
                                     </ul>
                                     <p>The word Sangeet translates to ‘sung together’ from Sanskrit. ‘Gaun’, another word used to describe the event, means ‘songs’ or ‘to sing’ in Hindi.This musical night is a celebration of the union of not only the couple but the bonding of both families. It is here that both sides bring down their barriers and mingle in a fun environment. It is a celebration that can be as lavish or as toned down as the families can afford</p>
-                                    <a class="see-location popup-gmaps" href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d25211.21212385712!2d144.95275648773628!3d-37.82748510398018!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad642af0f11fd81%3A0x5045675218ce7e0!2zTWVsYm91cm5lIFZJQyAzMDA0LCDgpoXgprjgp43gpp_gp43gprDgp4fgprLgpr_gpq_gprzgpr4!5e0!3m2!1sbn!2sbd!4v1503742051881">
+                                    <a class="see-location popup-gmaps" href="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14284.347741381524!2d74.6302137!3d26.4851456!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x6b3c29f85f558832!2sHotel%20Mansingh%20Palace%2C%20Ajmer!5e0!3m2!1sen!2sin!4v1577550864963!5m2!1sen!2sin">
                                         See location <i class="ti-arrow-right"></i>
                                     </a>
                                 </div>
@@ -278,7 +278,7 @@
                                         <li><i class="ti-alarm-clock"></i> Jan 29, 2020</li>
                                     </ul>
                                     <p> The most vital social event in Indian custom, marriage is based on the early Vedic Concept in which union of two souls and bodies make for a supreme union.This is the day when tie a knot and take vows to be together forever.</p>
-                                    <a class="see-location popup-gmaps" href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d25211.21212385712!2d144.95275648773628!3d-37.82748510398018!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad642af0f11fd81%3A0x5045675218ce7e0!2zTWVsYm91cm5lIFZJQyAzMDA0LCDgpoXgprjgp43gpp_gp43gprDgp4fgprLgpr_gpq_gprzgpr4!5e0!3m2!1sbn!2sbd!4v1503742051881">
+                                    <a class="see-location popup-gmaps" href="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14284.347741381524!2d74.6302137!3d26.4851456!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x6b3c29f85f558832!2sHotel%20Mansingh%20Palace%2C%20Ajmer!5e0!3m2!1sen!2sin!4v1577550864963!5m2!1sen!2sin">
                                         See location <i class="ti-arrow-right"></i>
                                     </a>
                                 </div>
