--- a/wedding/templates/home.html
+++ b/wedding/templates/home.html
@@ -242,7 +242,7 @@
                                 <div class="details">
                                     <h3>Ladies Sangeet</h3>
                                     <ul>
-                                        <li><i class="ti-location-pin"></i>Mansing Palace</li>
+                                        <li><i class="ti-location-pin"></i>Mansingh Palace</li>
                                         <li><i class="ti-alarm-clock"></i> Jan 28, 2020</li>
                                     </ul>
                                     <p>The word Sangeet translates to ‘sung together’ from Sanskrit. ‘Gaun’, another word used to describe the event, means ‘songs’ or ‘to sing’ in Hindi.This musical night is a celebration of the union of not only the couple but the bonding of both families. It is here that both sides bring down their barriers and mingle in a fun environment. It is a celebration that can be as lavish or as toned down as the families can afford</p>
@@ -274,7 +274,7 @@
                                 <div class="details">
                                     <h3>Wedding Ceremony</h3>
                                     <ul>
-                                        <li><i class="ti-location-pin"></i>Mansing Palace</li>
+                                        <li><i class="ti-location-pin"></i>Mansingh Palace</li>
                                         <li><i class="ti-alarm-clock"></i> Jan 29, 2020</li>
                                     </ul>
                                     <p> The most vital social event in Indian custom, marriage is based on the early Vedic Concept in which union of two souls and bodies make for a supreme union.This is the day when tie a knot and take vows to be together forever.</p>
